<resources>
    <string name="app_name">NMedia</string>
    <string name="greeting">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_liked">Add to favorite</string>
    <string name="description_post_shared">Share</string>
    <string name="description_post_viewed">Views quantity</string>
    <string name="description_post_add">Add post</string>
    <string name="description_post_save">Save post</string>
    <string name="post_text">Enter your text</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="error_empty_content">Content cannot be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="video_preview">Video preview</string>
    <string name="playback_video">Playback video</string>
    <string name="error_no_activity_to_open_media">Cannot find application to open media file</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_posted">User %1$s posted new post</string>
    <string name="channel_remote_name">NMedia server notifications</string>
    <string name="channel_remote_description">Notifications from remote NMedia server</string>
</resources>
