<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintBottom_toBottomOf="@id/barrierTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        tools:text="@sample/posts.json/data/content" />

    <ImageView
        android:id="@+id/videoPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/attr_spacing"
        android:adjustViewBounds="true"
        android:contentDescription="@string/video_preview"
        android:src="@drawable/video_placeholder"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabVideoPlayback"
        style="@style/Widget.AppTheme.PlaybackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/playback_video"
        app:layout_constraintBottom_toBottomOf="@id/videoPreview"
        app:layout_constraintEnd_toEndOf="@id/videoPreview"
        app:layout_constraintStart_toStartOf="@id/videoPreview"
        app:layout_constraintTop_toTopOf="@id/videoPreview"
        app:maxImageSize="@dimen/button_play_size"
        app:srcCompat="@drawable/ic_baseline_play_circle_48"
        app:tint="@color/purple_700" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="videoPreview,fabVideoPlayback"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="videoPreview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/liked"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/description_post_liked"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        tools:checked="@sample/posts.json/data/liked"
        tools:text="@sample/posts.json/data/likes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shared"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:contentDescription="@string/description_post_shared"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="@id/liked"
        app:layout_constraintStart_toEndOf="@id/liked"
        app:layout_constraintTop_toTopOf="@id/liked"
        tools:text="@sample/posts.json/data/shares" />

    <TextView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/attr_spacing"
        app:layout_constraintBottom_toBottomOf="@id/shared"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/shared"
        tools:text="@sample/posts.json/data/views" />

    <ImageView
        android:id="@+id/viewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_viewed"
        android:src="@drawable/ic_baseline_visibility_24"
        app:layout_constraintBottom_toBottomOf="@id/views"
        app:layout_constraintEnd_toStartOf="@id/views"
        app:layout_constraintTop_toTopOf="@id/views" />

</androidx.constraintlayout.widget.ConstraintLayout>
